--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
+    "antd": "^5.16.4",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
