--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.16.4",
+    "mongoose": "^8.3.2",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
+    "react-modal": "^3.16.1",
     "react-redux": "^9.1.1"
   },
   "devDependencies": {
