--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "react-dom": "^18",
     "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.1"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "daisyui": "^4.10.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
