--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.16.4",
     "mongoose": "^8.3.2",
@@ -18,7 +23,10 @@
     "react-icons": "^5.1.0",
     "react-modal": "^3.16.1",
     "react-player": "^2.16.0",
-    "react-redux": "^9.1.1"
+    "react-redux": "^9.1.1",
+    "react-youtube": "^10.1.0",
+    "screenfull": "^6.0.2",
+    "video-react": "^0.16.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
