--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react-modal": "^3.16.1",
     "react-player": "^2.16.0",
     "react-redux": "^9.1.1",
+    "react-toastify": "^10.0.5",
     "react-youtube": "^10.1.0",
     "screenfull": "^6.0.2",
+    "swr": "^2.2.5",
     "video-react": "^0.16.0"
   },
   "devDependencies": {
