--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
     "antd": "^5.16.4",
+    "firebase": "^10.11.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
     "next": "14.2.2",
     "react": "^18",
