--- a/.gitignore
+++ b/.gitignore
@@ -26,8 +26,12 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+
+.env
+.env.example
 .env.local
+.env*.local
+.env.staging
 
 # vercel
 .vercel
