--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-toastify": "^10.0.5",
     "react-youtube": "^10.1.0",
     "screenfull": "^6.0.2",
+    "sweetalert2": "^11.11.0",
     "swr": "^2.2.5",
     "video-react": "^0.16.0"
   },
