--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "firebase": "^10.11.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.2",
-    "next": "14.2.2",
+    "next": "^14.2.14",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
